--- a/events/findYourWeb3CoFounder.toml
+++ b/events/findYourWeb3CoFounder.toml
@@ -1,61 +1,61 @@
 # the name of your track or event
-name = "CASA Mini-Gathering"
+name = "Find your web3 CoFounder"
 
 # the name of the group organizing the event
-org = "Chain Agnostic Standards Alliance"
+org = ""
 
 # the github handle of the directly responsible individual for this event
 # (this person will coordinate with devent organizers)
-dri = "@bumblefudge"
+# dri = "Juan Benet"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://github.com/ChainAgnostic/Gatherings/blob/main/2022-10-27-LIS-ethlisbon/agenda.md"
+website = "https://lu.ma/w6sw60q8"
 
 # the start date of the event
-date = "2022-10-27"
+date = "2023-12-05"
 
 # how many days the event lasts (1 - N)
 days = 1
 
 # the event times (shows up in the event card)
-times = "15:00 - 18:00"
+times = "09:00 - 12:00"
 
 # the event venue name (will show up on the event card - TODO)
-venueName = "Garagem Lisboa"
+venueName = ""
 
 # the event venue address (will show up on a map -- TODO)
-venueAddress = "Jardim 9 de Abril, 1200-736 Lisboa, Portugal"
+venueAddress = ""
 
 # the max number of attendees of the event
-attendees = "50"
+attendees = ""
 
 
 # these is unsued:
-# tickets = "Open"
+# tickets = ""
 
 # the "difficulty" of the event -- one of:
 # ["Beginner", "Intermediate", "Advanced", "All Welcome"]
-difficulty = "All Welcome"
+difficulty = "Free"
 
 # tags for the event, will show up as labels.
 # pick 1-4
-tags = ["Talks", "Workshops"]
+tags = ["Networking"]
 
 # a color, to group key events visually. use sparingly
-# color="purple"
+color="orange"
 
 # A small logomark for the corner of the event (logomark image can be placed in "/website/public/logomarks")
-# logomark = "https://github.com/ChainAgnostic/assets/blob/main/logo/casa-logo-black-bg-white.png"
+# logomark = "/logomarks/Protocol Labs.jpeg"
 
 # a description of the event.
 # will show up when the user clicks the event card.
-description = """
-Bottom-up standards in the open, short presentations and workshops.
-Anyone curious about cross-chain engineering anywhere in the web3 stack is welcome.
-Check out the schedule on our github.
-"""
+# description = """
+# Join us for a live virtual conversation between University of Oxford philosopher Nick Bostrom and Protocol Labs' Founder Juan Benet on all things AI. Learn where the current developments in artificial intelligence and digital minds are leading society and how we step up to the challenges that will arise in this field. Nick will sit down with Juan for a wide-ranging conversation before the audience has the opportunity to ask questions and interact with the speakers.
 
 # the priority in the schedule table, leave commented if you don't need to control this
 # 1 will appear at the top, higher numbers appear closer to bottom
-# priority = 1
+priority = 3
+
+# if event has a livestream uncomment the following line
+isLive = false
