--- a/events/ibw23ConfDay1.toml
+++ b/events/ibw23ConfDay1.toml
@@ -1,31 +1,31 @@
 # the name of your track or event
-name = "Breakthroughs in Computing Speaker Series"
+name = ":star2: IBW'23 Conference - Day 1 :star2:"
 
 # the name of the group organizing the event
-org = "Protocol Labs"
+org = "Hashed Emergent"
 
 # the github handle of the directly responsible individual for this event
 # (this person will coordinate with devent organizers)
-dri = "Juan Benet"
+# dri = "Juan Benet"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://breakthroughs-in-computing.labweek.io/"
+website = "https://indiablockchainweek.com/"
 
 # the start date of the event
-date = "2022-10-24"
+date = "2023-12-06"
 
 # how many days the event lasts (1 - N)
-days = 4
+days = 1
 
 # the event times (shows up in the event card)
-times = "10/24 16:00 - 18:00, 10/25 - 10/27 18:00 - 20:00"
+times = "09:00 - 18:00"
 
 # the event venue name (will show up on the event card - TODO)
-venueName = "10/24 [Convento do Beato](https://goo.gl/maps/2yDdwVSHfgs1mYhL7), 10/25 - 10/27 [SUD Lisboa](https://g.page/sudlisboa?share)"
+venueName = "[Sheraton Grand Bengaluru Whitefield Hotel & Convention Center](https://maps.app.goo.gl/DqNk2cUvMaVbWWhq8)"
 
 # the event venue address (will show up on a map -- TODO)
-# venueAddress = ""
+venueAddress = ""
 
 # the max number of attendees of the event
 attendees = ""
@@ -36,28 +36,26 @@ attendees = ""
 
 # the "difficulty" of the event -- one of:
 # ["Beginner", "Intermediate", "Advanced", "All Welcome"]
-difficulty = "All Welcome"
+difficulty = "Priced"
 
 # tags for the event, will show up as labels.
 # pick 1-4
-tags = ["Talks"]
+tags = ["Conference/Summit"]
 
 # a color, to group key events visually. use sparingly
 color="orange"
 
 # A small logomark for the corner of the event (logomark image can be placed in "/website/public/logomarks")
-logomark = "/logomarks/Protocol Labs.jpeg"
+# logomark = "/logomarks/Protocol Labs.jpeg"
 
 # a description of the event.
 # will show up when the user clicks the event card.
-description = """‍This event is part of the Breakthroughs in Computing Speaker Series, on how technology will shape society in the next 5 to 25 years. Hosted by Protocol Labs, this series runs every evening from Oct 24-27. It's designed to bring people together, sharing convivial drinks, thoughtful discussions, and new connections.  
-
-Watch the recordings with [Allison Duetmann](https://www.youtube.com/watch?v=lBvkFZycXRQ), [Nick Bostrom](https://www.youtube.com/watch?v=VG8lanbnbwk), [Ahmed Ghappour](https://www.youtube.com/watch?v=qymQqf8UefU), [Max Tegmark](https://www.youtube.com/watch?v=_5ZxcxS3o3k), and [Adam Marblestone](Adam Marblestone)!
-"""
+# description = """
+# Join us for a live virtual conversation between University of Oxford philosopher Nick Bostrom and Protocol Labs' Founder Juan Benet on all things AI. Learn where the current developments in artificial intelligence and digital minds are leading society and how we step up to the challenges that will arise in this field. Nick will sit down with Juan for a wide-ranging conversation before the audience has the opportunity to ask questions and interact with the speakers.
 
 # the priority in the schedule table, leave commented if you don't need to control this
 # 1 will appear at the top, higher numbers appear closer to bottom
 priority = 3
 
 # if event has a livestream uncomment the following line
-isLive = true
+isLive = false
