--- a/events/ibw23PreConfVipDinner.toml
+++ b/events/ibw23PreConfVipDinner.toml
@@ -1,59 +1,62 @@
 # the name of your track or event
-name = "Mona x ETH Lisbon"
+name = ":female-singer: IBW'23 Pre-Conference VIP Dinner :male-singer:"
 
 # the name of the group organizing the event
-org = "Mona"
+org = "Hashed Emergent"
 
 # the github handle of the directly responsible individual for this event
 # (this person will coordinate with devent organizers)
-dri = "Matt Hoerl, Justin Melillo"
+# dri = "Juan Benet"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://lu.ma/mona-lisbon"
+website = "https://indiablockchainweek.com/"
 
 # the start date of the event
-date = "2022-10-27"
+date = "2023-12-05"
 
 # how many days the event lasts (1 - N)
 days = 1
 
 # the event times (shows up in the event card)
-times = "17:00 - 21:00"
+times = "TBA"
 
 # the event venue name (will show up on the event card - TODO)
-venueName = "[Time Out Market Studio](https://g.page/timeoutmarketlisboa?share)"
+venueName = "TBA"
 
 # the event venue address (will show up on a map -- TODO)
-venueAddress = "Av. 24 de Julho 49, 1200-479 Lisboa, Portugal"
+venueAddress = "TBA"
 
 # the max number of attendees of the event
-attendees = "250"
+attendees = ""
 
 
 # these is unsued:
-# tickets = "Waitlist"
+# tickets = ""
 
 # the "difficulty" of the event -- one of:
 # ["Beginner", "Intermediate", "Advanced", "All Welcome"]
-difficulty = "All Welcome"
+difficulty = "Apply for Invite - only"
 
 # tags for the event, will show up as labels.
 # pick 1-4
-tags = ["Party"]
+tags = ["Networking"]
 
 # a color, to group key events visually. use sparingly
-color="yellow"
+color="orange"
 
-# A small logomark for the corner of the event
-logomark = "/logomarks/Mona-lm.jpg"
+# A small logomark for the corner of the event (logomark image can be placed in "/website/public/logomarks")
+# logomark = "/logomarks/Protocol Labs.jpeg"
 
 # a description of the event.
 # will show up when the user clicks the event card.
-description = """
-Come celebrate a year of creativity building in the metaverse with Mona and help LabWeek welcome ETH Lisbon. Ft. Metaverse Installations, live world-building, and music
-"""
+# description = """
+# Join us for a live virtual conversation between University of Oxford philosopher Nick Bostrom and Protocol Labs' Founder Juan Benet on all things AI. Learn where the current developments in artificial intelligence and digital minds are leading society and how we step up to the challenges that will arise in this field. Nick will sit down with Juan for a wide-ranging conversation before the audience has the opportunity to ask questions and interact with the speakers.
+
 
 # the priority in the schedule table, leave commented if you don't need to control this
 # 1 will appear at the top, higher numbers appear closer to bottom
-priority = 5
+priority = 3
+
+# if event has a livestream uncomment the following line
+isLive = false
