--- a/events/proofOfSecuritySummit23.toml
+++ b/events/proofOfSecuritySummit23.toml
@@ -1,34 +1,34 @@
 # the name of your track or event
-name = "Talent Day @ Talent House Lisbon"
+name = "Proof of Security Summit'23"
 
 # the name of the group organizing the event
-org = "Talent Protocol"
+org = "Solidityscan"
 
 # the github handle of the directly responsible individual for this event
 # (this person will coordinate with devent organizers)
-dri = "Filipe Macedo"
+# dri = "Juan Benet"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://lu.ma/talentdayLisbon"
+website = "https://lu.ma/proofofsecurity"
 
 # the start date of the event
-date = "2022-10-27"
+date = "2023-12-05"
 
 # how many days the event lasts (1 - N)
 days = 1
 
 # the event times (shows up in the event card)
-times = "10:00 - 15:30"
+times = "9:00 - 18:00"
 
 # the event venue name (will show up on the event card - TODO)
-venueName = "[Look Lisbon](https://goo.gl/maps/nQCZf7hSuW66gzwk7)"
+venueName = "TBA"
 
 # the event venue address (will show up on a map -- TODO)
-venueAddress = "4 Rua Pedras Negras, Lisbon, Portugal"
+venueAddress = "TBA"
 
 # the max number of attendees of the event
-attendees = "50"
+attendees = ""
 
 
 # these is unsued:
@@ -36,28 +36,26 @@ attendees = "50"
 
 # the "difficulty" of the event -- one of:
 # ["Beginner", "Intermediate", "Advanced", "All Welcome"]
-difficulty = "All Welcome"
+difficulty = "Application"
 
 # tags for the event, will show up as labels.
 # pick 1-4
-tags = ["Networking"]
+tags = ["Conference/Summit"]
 
 # a color, to group key events visually. use sparingly
-# color=""
+color="orange"
 
-# A small logomark for the corner of the event
-logomark = "/logomarks/talentprotocol.jpg"
+# A small logomark for the corner of the event (logomark image can be placed in "/website/public/logomarks")
+# logomark = "/logomarks/Protocol Labs.jpeg"
 
 # a description of the event.
 # will show up when the user clicks the event card.
 description = """
-​Talent Day by Protocol Labs marks the start of Talent House #5 in Lisbon and aims to incentivize the creation of interesting and useful connections between different communities.
-
-​Join Protocol Labs, Celo, and Talent Protocol on October 27th in Lisbon for a day of delicious food and inspiring conversations with fellow web3 builders.
-
-​This is a private event for 50 people maximum. Attendees will be selected based on their profile, not first come first served.
-"""
-
+# Join us for a live virtual conversation between University of Oxford philosopher Nick Bostrom and Protocol Labs' Founder Juan Benet on all things AI. Learn where the current developments in artificial intelligence and digital minds are leading society and how we step up to the challenges that will arise in this field. Nick will sit down with Juan for a wide-ranging conversation before the audience has the opportunity to ask questions and interact with the speakers.
+‍
 # the priority in the schedule table, leave commented if you don't need to control this
 # 1 will appear at the top, higher numbers appear closer to bottom
-priority = 2
+priority = 3
+
+# if event has a livestream uncomment the following line
+isLive = false
