--- a/events/supraInfraLayer.toml
+++ b/events/supraInfraLayer.toml
@@ -1,57 +1,61 @@
 # the name of your track or event
-name = "Decentralized Breakfast by Fluence"
+name = "Supra IntraLayer Day"
 
 # the name of the group organizing the event
-org = "Fluence"
+org = "Supra"
 
 # the github handle of the directly responsible individual for this event
 # (this person will coordinate with devent organizers)
-dri = "@mariakruglova"
+# dri = "Juan Benet"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://lu.ma/breakfast_lisbon"
+website = "https://lu.ma/c5f2r6w2"
 
 # the start date of the event
-date = "2022-11-03"
+date = "2023-12-05"
 
 # how many days the event lasts (1 - N)
 days = 1
 
 # the event times (shows up in the event card)
-times = "10:00 - 12:00"
+times = "11:00 - 17:00"
 
 # the event venue name (will show up on the event card - TODO)
-venueName = "Heden Santa Apolonia"
+venueName = ""
 
 # the event venue address (will show up on a map -- TODO)
-venueAddress = "Doca Jardim do Tabaco, Terminal de Cruzeiros de Lisboa - Edifício NE 1st floor, 1100-651 Lisboa"
+venueAddress = ""
 
 # the max number of attendees of the event
-attendees = "60"
+attendees = ""
 
 
 # these is unsued:
-# tickets = "Waitlist"
+# tickets = ""
 
 # the "difficulty" of the event -- one of:
 # ["Beginner", "Intermediate", "Advanced", "All Welcome"]
-difficulty = "All Welcome"
+difficulty = "Free"
 
 # tags for the event, will show up as labels.
 # pick 1-4
-tags = ["Networking"]
+tags = ["Conference/Summit"]
 
 # a color, to group key events visually. use sparingly
-# color="purple"
+color="orange"
+
+# A small logomark for the corner of the event (logomark image can be placed in "/website/public/logomarks")
+# logomark = "/logomarks/Protocol Labs.jpeg"
 
 # a description of the event.
 # will show up when the user clicks the event card.
-description = """
-Start your day meeting Fluence team along with other web3 community thought leaders and builders during LabWeek.
-The idea of the breakfast is to meet each other, network, socialize and grab a tasty snack. 
-"""
+# description = """
+# Join us for a live virtual conversation between University of Oxford philosopher Nick Bostrom and Protocol Labs' Founder Juan Benet on all things AI. Learn where the current developments in artificial intelligence and digital minds are leading society and how we step up to the challenges that will arise in this field. Nick will sit down with Juan for a wide-ranging conversation before the audience has the opportunity to ask questions and interact with the speakers.
 
 # the priority in the schedule table, leave commented if you don't need to control this
 # 1 will appear at the top, higher numbers appear closer to bottom
-# priority = 1
+priority = 3
+
+# if event has a livestream uncomment the following line
+isLive = false
