--- a/events/textToCode.toml
+++ b/events/textToCode.toml
@@ -1,31 +1,31 @@
 # the name of your track or event
-name = "Open Metaverse meetup with Mona Galleries"
+name = "Text to Code | Tokenomics Workshop with Lisa Tan"
 
 # the name of the group organizing the event
-org = "Filecoin Foundation"
+org = "Hashed Emergent"
 
 # the github handle of the directly responsible individual for this event
 # (this person will coordinate with devent organizers)
-dri = "Florencia Barrerio & Heath Owen"
+# dri = "Juan Benet"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://openmetaverse.eventbrite.com"
+website = "https://lu.ma/c5f2r6w2"
 
 # the start date of the event
-date = "2022-10-25"
+date = "2023-12-05"
 
 # how many days the event lasts (1 - N)
 days = 1
 
 # the event times (shows up in the event card)
-times = "12:30 - 18:00"
+times = "11:00 - 13:30"
 
 # the event venue name (will show up on the event card - TODO)
-venueName = "[Garagem Lisboa](https://goo.gl/maps/LB4TsVA1dkEjaKTo7)"
+venueName = "[Hashed Haus](https://maps.app.goo.gl/nKftYeu9fg61eSPbA)"
 
 # the event venue address (will show up on a map -- TODO)
-venueAddress = "Garagem Lisboa, Jardim 9 de Abril, 1200-736 Lisboa, Portugal"
+venueAddress = "261, 3rd Main Rd, Defence Colony, Indiranagar, Bengaluru, Karnataka 560038"
 
 # the max number of attendees of the event
 attendees = ""
@@ -36,24 +36,26 @@ attendees = ""
 
 # the "difficulty" of the event -- one of:
 # ["Beginner", "Intermediate", "Advanced", "All Welcome"]
-difficulty = "All Welcome"
+difficulty = "Free"
 
 # tags for the event, will show up as labels.
 # pick 1-4
-tags = ["Meetup", "Happy Hour"]
+tags = ["Hackathon/Workshop"]
 
 # a color, to group key events visually. use sparingly
-# color=""
+color="orange"
 
 # A small logomark for the corner of the event (logomark image can be placed in "/website/public/logomarks")
-logomark = "/logomarks/FF.circle.png"
+# logomark = "/logomarks/Protocol Labs.jpeg"
 
 # a description of the event.
 # will show up when the user clicks the event card.
-description = """
-Bring your IRL avatar to the Filecoin Foundation Hacker Base for an interactive open metaverse experience with Mona. Mona is making metaverse building and exploration open to everyone with their free platform accessible from your web browser, and now they’re bringing the metaverse to Lisbon. Join experts from Peregrine, a web3-focused experiential content team, to discover building in the metaverse through interactive demos, virtual reality tours, and finish up with happy hour to bring you back to our physical world.
-"""
+# description = """
+# Join us for a live virtual conversation between University of Oxford philosopher Nick Bostrom and Protocol Labs' Founder Juan Benet on all things AI. Learn where the current developments in artificial intelligence and digital minds are leading society and how we step up to the challenges that will arise in this field. Nick will sit down with Juan for a wide-ranging conversation before the audience has the opportunity to ask questions and interact with the speakers.
 
 # the priority in the schedule table, leave commented if you don't need to control this
 # 1 will appear at the top, higher numbers appear closer to bottom
-priority = 2
+priority = 3
+
+# if event has a livestream uncomment the following line
+isLive = false
