--- a/events/wakuHackerHouse.toml
+++ b/events/wakuHackerHouse.toml
@@ -1,34 +1,34 @@
 # the name of your track or event
-name = "ConsensusLab Summit"
+name = "Waku Hacker House"
 
 # the name of the group organizing the event
-org = "ConsensusLab"
+org = "Waku"
 
 # the github handle of the directly responsible individual for this event
 # (this person will coordinate with devent organizers)
-dri = "Jorge Soares"
+# dri = "Juan Benet"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.consensuslabsummit.io/"
+website = "https://lu.ma/waku-hackerhouse"
 
 # the start date of the event
-date = "2022-10-26"
+date = "2023-12-05"
 
 # how many days the event lasts (1 - N)
 days = 1
 
 # the event times (shows up in the event card)
-times = "14:00 - 19:00"
+times = "10:00 - TBA"
 
 # the event venue name (will show up on the event card - TODO)
-venueName = "[Time Out Market](https://g.page/timeoutmarketlisboa?share)"
+venueName = ""
 
 # the event venue address (will show up on a map -- TODO)
-venueAddress = "Av. 24 de Julho 49, 1200-479 Lisboa, Portugal"
+venueAddress = ""
 
 # the max number of attendees of the event
-attendees = "100"
+attendees = ""
 
 
 # these is unsued:
@@ -36,28 +36,26 @@ attendees = "100"
 
 # the "difficulty" of the event -- one of:
 # ["Beginner", "Intermediate", "Advanced", "All Welcome"]
-difficulty = "All Welcome"
+difficulty = "Free"
 
 # tags for the event, will show up as labels.
 # pick 1-4
-tags = ["Talks"]
+tags = ["Hackathon/Workshop"]
 
 # a color, to group key events visually. use sparingly
-color="blue"
+color="orange"
 
-# A small logomark for the corner of the event
-logomark = "/logomarks/ConsensusLab-symbol-color.png"
+# A small logomark for the corner of the event (logomark image can be placed in "/website/public/logomarks")
+# logomark = "/logomarks/Protocol Labs.jpeg"
 
 # a description of the event.
 # will show up when the user clicks the event card.
-description = """Consensus lies at the heart of blockchain networks: while enabling the decentralisation we’re working towards, it also imposes scalability constraints. In the 15 months since its creation, ConsensusLab has been working on novel solutions to scaling blockchains in general and Filecoin in particular, ranging from our flagship InterPlanetary Consensus project to multi-threaded execution in FVM. Join us in Lisbon to get a sneak peek into the future of Filecoin and shape our directions, all during an afternoon of good talks, great discussions, and cold drinks.
-
-Watch the recording [here](https://www.youtube.com/watch?v=MRiCv58ttvs)!
-"""
+# description = """
+# Join us for a live virtual conversation between University of Oxford philosopher Nick Bostrom and Protocol Labs' Founder Juan Benet on all things AI. Learn where the current developments in artificial intelligence and digital minds are leading society and how we step up to the challenges that will arise in this field. Nick will sit down with Juan for a wide-ranging conversation before the audience has the opportunity to ask questions and interact with the speakers.
 
 # the priority in the schedule table, leave commented if you don't need to control this
 # 1 will appear at the top, higher numbers appear closer to bottom
 priority = 3
 
 # if event has a livestream uncomment the following line
-isLive = true
+isLive = false
