--- a/events/womenInTech.toml
+++ b/events/womenInTech.toml
@@ -1,59 +1,61 @@
 # the name of your track or event
-name = "Sustainability, Social Impact, and Spirits"
+name = ":female_superhero: Women in Tech IBW :female-technologist:"
 
 # the name of the group organizing the event
-org = "Filecoin Green and Filecoin Foundation's Social Impact Team"
+org = "Hashed Open Dialogue for Law (HODL)"
 
 # the github handle of the directly responsible individual for this event
 # (this person will coordinate with devent organizers)
-dri = "@caitlin-moore"
+# dri = "Juan Benet"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.eventbrite.com/e/sustainability-social-impact-and-spirits-tickets-443326199597"
+website = "https://lu.ma/6nvd12q3"
 
 # the start date of the event
-date = "2022-10-28"
+date = "2023-12-05"
 
 # how many days the event lasts (1 - N)
 days = 1
 
 # the event times (shows up in the event card)
-times = "17:00 - 19:00"
+times = "17:30 - 20:30"
 
 # the event venue name (will show up on the event card - TODO)
-venueName = "[The Vintage Hotel and Spa Lisbon Rooftop](https://goo.gl/maps/MTmKPVaQagnDjXtD7)"
+venueName = "[Fox In the field](https://maps.app.goo.gl/UsQUbvZpqHi6AmCb9)"
 
 # the event venue address (will show up on a map -- TODO)
-venueAddress = "2 Rua Rodrigo da Fonseca 1250-191 Lisboa Portugal"
+venueAddress = ""
 
 # the max number of attendees of the event
-attendees = "75"
+attendees = ""
 
 
 # these is unsued:
-# tickets = "Waitlist"
+# tickets = ""
 
 # the "difficulty" of the event -- one of:
 # ["Beginner", "Intermediate", "Advanced", "All Welcome"]
-difficulty = "All Welcome"
+difficulty = "Free"
 
 # tags for the event, will show up as labels.
 # pick 1-4
-tags = ["Happy Hour"]
+tags = ["Other"]
 
 # a color, to group key events visually. use sparingly
-# color="green"
+color="orange"
 
 # A small logomark for the corner of the event (logomark image can be placed in "/website/public/logomarks")
-# logomark = "/logomarks/filecoin_green.png"
+# logomark = "/logomarks/Protocol Labs.jpeg"
 
 # a description of the event.
 # will show up when the user clicks the event card.
-description = """
-Join Filecoin Green and the Filecoin Foundation's Social Impact team for an evening centered around the intersection of sustainability, social impact, and the decentralized web! 
-"""
+# description = """
+# Join us for a live virtual conversation between University of Oxford philosopher Nick Bostrom and Protocol Labs' Founder Juan Benet on all things AI. Learn where the current developments in artificial intelligence and digital minds are leading society and how we step up to the challenges that will arise in this field. Nick will sit down with Juan for a wide-ranging conversation before the audience has the opportunity to ask questions and interact with the speakers.
 
 # the priority in the schedule table, leave commented if you don't need to control this
 # 1 will appear at the top, higher numbers appear closer to bottom
-# priority = 
+priority = 3
+
+# if event has a livestream uncomment the following line
+isLive = false
