feat: events added

--- a/events/ibw23ConfDay2.toml
+++ b/events/ibw23ConfDay2.toml
@@ -1,5 +1,5 @@
 # the name of your track or event
-name = ":star2: IBW'23 Conference - Day 2 :star2:"
+name = "⭐ IBW'23 Conference - Day 2 ⭐ "
 
 # the name of the group organizing the event
 org = "Hashed Emergent"
