--- a/events/ibw23ConfDay1.toml
+++ b/events/ibw23ConfDay1.toml
@@ -1,5 +1,5 @@
 # the name of your track or event
-name = ":star2: IBW'23 Conference - Day 1 :star2:"
+name = "⭐ IBW'23 Conference - Day 1 ⭐"
 
 # the name of the group organizing the event
 org = "Hashed Emergent"
