added new events with updated month as dec

--- a/events/ETHIndia2023Day3.toml
+++ b/events/ETHIndia2023Day3.toml
@@ -1,25 +1,25 @@
 
 # the name of your track or event
-name = "Pragma India"
+name = "ETHIndia 2023 - Day 3"
 
 # the name of the group organizing the event
-org =  "ETH Global"
+org =  "Devfolio, ETHGlobal"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://ethglobal.com/events/pragma-india&sa=D&source=editors&ust=1701783124663184&usg=AOvVaw0T__2UJ4rVBdJE0Woedint"
+website = "https://www.google.com/url?q=https://ethindia.co/&sa=D&source=editors&ust=1701783124722211&usg=AOvVaw1f0zG2uzhW1iXefCNQGSoW"
 
 # the start date of the event
-date = "2023-12-07"
+date = "2023-12-10"
 
 # how many days the event lasts (1 - N)
 days = 1
 
 # the event times (shows up in the event card)
-times = "10:00 AM - 18:00 PM"
+times = "8:00 AM - 16:30"
 
 # the event venue name (will show up on the event card - TODO)
-venueName = "(https://www.google.com/url?q=https://maps.app.goo.gl/9ET4X8pPM2gbBoPUA&sa=D&source=editors&ust=1701783124662863&usg=AOvVaw1aIQGUw6VtMXJ8x6tdjKxL)"
+venueName = "(https://www.google.com/url?q=https://maps.app.goo.gl/e6piDMM6ZrqULw2R6&sa=D&source=editors&ust=1701783124722018&usg=AOvVaw2g3MpRoFYUcPAtgK2sSWai)"
 
 # the event venue address (will show up on a map -- TODO)
 venueAddress = "TBA"
@@ -30,11 +30,11 @@ venueAddress = "TBA"
 
 # the "difficulty" of the event -- one of:
 # ["Beginner", "Intermediate", "Advanced", "All Welcome"]
-difficulty = "Priced"
+difficulty = "Application"
 
 # tags for the event, will show up as labels.
 # pick 1-4
-tags = ["Conference/Summit"]
+tags = ["Hackathon/Workshop"]
 
 # a color, to group key events visually. use sparingly
 color="orange"
