--- a/events/echoesofEarthDay1.toml
+++ b/events/echoesofEarthDay1.toml
@@ -1,25 +1,26 @@
 
 # the name of your track or event
-name = "Pragma India"
+name = "Echoes of Earth - Day 1
+Swordfish Entertainment"
 
 # the name of the group organizing the event
-org =  "ETH Global"
+org =  "Swordfish Entertainment"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://ethglobal.com/events/pragma-india&sa=D&source=editors&ust=1701783124663184&usg=AOvVaw0T__2UJ4rVBdJE0Woedint"
+website = "https://www.google.com/url?q=https://echoesofearth.com/&sa=D&source=editors&ust=1701783124584492&usg=AOvVaw2I9DbxDNj7MZa0n3n-e7YS"
 
 # the start date of the event
-date = "2023-12-07"
+date = "2023-12-02"
 
 # how many days the event lasts (1 - N)
 days = 1
 
 # the event times (shows up in the event card)
-times = "10:00 AM - 18:00 PM"
+times = "TBA - TBA"
 
 # the event venue name (will show up on the event card - TODO)
-venueName = "(https://www.google.com/url?q=https://maps.app.goo.gl/9ET4X8pPM2gbBoPUA&sa=D&source=editors&ust=1701783124662863&usg=AOvVaw1aIQGUw6VtMXJ8x6tdjKxL)"
+venueName = "(https://www.google.com/url?q=https://goo.gl/maps/FimPShPzfMgQLeFu6&sa=D&source=editors&ust=1701783124584263&usg=AOvVaw34VQvKCdHt36JDGtAtlv64)"
 
 # the event venue address (will show up on a map -- TODO)
 venueAddress = "TBA"
@@ -34,7 +35,7 @@ difficulty = "Priced"
 
 # tags for the event, will show up as labels.
 # pick 1-4
-tags = ["Conference/Summit"]
+tags = ["Party"]
 
 # a color, to group key events visually. use sparingly
 color="orange"
