--- a/events/web3reinvent.toml
+++ b/events/web3reinvent.toml
@@ -1,25 +1,25 @@
 
 # the name of your track or event
-name = "Pragma India"
+name = "web3.re:invent"
 
 # the name of the group organizing the event
-org =  "ETH Global"
+org =  "Spheron"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://ethglobal.com/events/pragma-india&sa=D&source=editors&ust=1701783124663184&usg=AOvVaw0T__2UJ4rVBdJE0Woedint"
+website = "https://www.google.com/url?q=https://lu.ma/web3reinvent&sa=D&source=editors&ust=1701783124714706&usg=AOvVaw04NmCyzfFapehZ7KC7WE3Y"
 
 # the start date of the event
-date = "2023-12-07"
+date = "2023-12-09"
 
 # how many days the event lasts (1 - N)
 days = 1
 
 # the event times (shows up in the event card)
-times = "10:00 AM - 18:00 PM"
+times = "TBA - TBA"
 
 # the event venue name (will show up on the event card - TODO)
-venueName = "(https://www.google.com/url?q=https://maps.app.goo.gl/9ET4X8pPM2gbBoPUA&sa=D&source=editors&ust=1701783124662863&usg=AOvVaw1aIQGUw6VtMXJ8x6tdjKxL)"
+venueName = "(https://www.google.com/url?q=https://www.google.com/maps/place/Bengaluru%2BMarriott%2BHotel%2BWhitefield/@12.9789845,77.728393,17z/data%3D!3m1!4b1!4m9!3m8!1s0x3bae11f15591198b:0x6f7d6b166b01e4e3!5m2!4m1!1i2!8m2!3d12.9789845!4d77.728393!16s%252Fg%252F1hg4r271y?entry%3Dttu&sa=D&source=editors&ust=1701783124714472&usg=AOvVaw1dE6bjhnh0Nu7TndE5AEnH)"
 
 # the event venue address (will show up on a map -- TODO)
 venueAddress = "TBA"
@@ -30,7 +30,7 @@ venueAddress = "TBA"
 
 # the "difficulty" of the event -- one of:
 # ["Beginner", "Intermediate", "Advanced", "All Welcome"]
-difficulty = "Priced"
+difficulty = "Application"
 
 # tags for the event, will show up as labels.
 # pick 1-4
