--- a/events/ICPCypherspace@IBW2023.toml
+++ b/events/ICPCypherspace@IBW2023.toml
@@ -1,13 +1,13 @@
 
 # the name of your track or event
-name = "Pragma India"
+name = "ICP Cypherspace @IBW 2023"
 
 # the name of the group organizing the event
-org =  "ETH Global"
+org =  "ICP Events"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://ethglobal.com/events/pragma-india&sa=D&source=editors&ust=1701783124663184&usg=AOvVaw0T__2UJ4rVBdJE0Woedint"
+website = "https://www.google.com/url?q=https://lu.ma/ICPCypherspaceIBW&sa=D&source=editors&ust=1701783124669365&usg=AOvVaw0lCmsnajlo2V4I3kopWy0r"
 
 # the start date of the event
 date = "2023-12-07"
@@ -16,10 +16,10 @@ date = "2023-12-07"
 days = 1
 
 # the event times (shows up in the event card)
-times = "10:00 AM - 18:00 PM"
+times = "9:00 AM - 13:00 AM"
 
 # the event venue name (will show up on the event card - TODO)
-venueName = "(https://www.google.com/url?q=https://maps.app.goo.gl/9ET4X8pPM2gbBoPUA&sa=D&source=editors&ust=1701783124662863&usg=AOvVaw1aIQGUw6VtMXJ8x6tdjKxL)"
+venueName = "(TBA)"
 
 # the event venue address (will show up on a map -- TODO)
 venueAddress = "TBA"
@@ -30,11 +30,11 @@ venueAddress = "TBA"
 
 # the "difficulty" of the event -- one of:
 # ["Beginner", "Intermediate", "Advanced", "All Welcome"]
-difficulty = "Priced"
+difficulty = "Free"
 
 # tags for the event, will show up as labels.
 # pick 1-4
-tags = ["Conference/Summit"]
+tags = ["Networking"]
 
 # a color, to group key events visually. use sparingly
 color="orange"
