--- a/events/Metamorphosis2023Day2.toml
+++ b/events/Metamorphosis2023Day2.toml
@@ -1,25 +1,25 @@
 
 # the name of your track or event
-name = "Pragma India"
+name = "Metamorphosis 2023 - Day 2"
 
 # the name of the group organizing the event
-org =  "ETH Global"
+org =  "Octaloop"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://ethglobal.com/events/pragma-india&sa=D&source=editors&ust=1701783124663184&usg=AOvVaw0T__2UJ4rVBdJE0Woedint"
+website = "https://www.google.com/url?q=https://metamorphosis.octaloop.com/bengaluru/&sa=D&source=editors&ust=1701783124722741&usg=AOvVaw1InHVBh7SkrnGErCQiESyX"
 
 # the start date of the event
-date = "2023-12-07"
+date = "2023-12-10"
 
 # how many days the event lasts (1 - N)
 days = 1
 
 # the event times (shows up in the event card)
-times = "10:00 AM - 18:00 PM"
+times = "TBA - TBA"
 
 # the event venue name (will show up on the event card - TODO)
-venueName = "(https://www.google.com/url?q=https://maps.app.goo.gl/9ET4X8pPM2gbBoPUA&sa=D&source=editors&ust=1701783124662863&usg=AOvVaw1aIQGUw6VtMXJ8x6tdjKxL)"
+venueName = "(https://www.google.com/url?q=https://www.google.com/maps/dir//The%2BDen%2Bbangalore/data%3D!4m6!4m5!1m1!4e2!1m2!1m1!1s0x3bae11ef82478417:0xb16280be4e67f5ff?sa%3DX%26ved%3D2ahUKEwim5oOu_JKCAxXfa2wGHVGKD-cQ9Rd6BAgVEAA%26ved%3D2ahUKEwim5oOu_JKCAxXfa2wGHVGKD-cQ9Rd6BAggEAQ&sa=D&source=editors&ust=1701783124722522&usg=AOvVaw0aZPGqqqMp0lImSeEqyjSS)"
 
 # the event venue address (will show up on a map -- TODO)
 venueAddress = "TBA"
