--- a/events/ReflexicalUnveilingSuccess.toml
+++ b/events/ReflexicalUnveilingSuccess.toml
@@ -1,25 +1,25 @@
 
 # the name of your track or event
-name = "Pragma India"
+name = "Reflexical - Unveiling Success for Web3 Founders"
 
 # the name of the group organizing the event
-org =  "ETH Global"
+org =  "Reflexical"
 
 # the website of the event
 # make sure to have all the relevant information: dates, venue, program, ticketing (if any), etc.
-website = "https://www.google.com/url?q=https://ethglobal.com/events/pragma-india&sa=D&source=editors&ust=1701783124663184&usg=AOvVaw0T__2UJ4rVBdJE0Woedint"
+website = "https://www.google.com/url?q=https://lu.ma/ryyn88aw&sa=D&source=editors&ust=1701783124707501&usg=AOvVaw1JuiH0GFLf8e2uWHl4DMzh"
 
 # the start date of the event
-date = "2023-12-07"
+date = "2023-12-08"
 
 # how many days the event lasts (1 - N)
 days = 1
 
 # the event times (shows up in the event card)
-times = "10:00 AM - 18:00 PM"
+times = "18:00 - 21:00"
 
 # the event venue name (will show up on the event card - TODO)
-venueName = "(https://www.google.com/url?q=https://maps.app.goo.gl/9ET4X8pPM2gbBoPUA&sa=D&source=editors&ust=1701783124662863&usg=AOvVaw1aIQGUw6VtMXJ8x6tdjKxL)"
+venueName = "(TBA)"
 
 # the event venue address (will show up on a map -- TODO)
 venueAddress = "TBA"
@@ -30,11 +30,11 @@ venueAddress = "TBA"
 
 # the "difficulty" of the event -- one of:
 # ["Beginner", "Intermediate", "Advanced", "All Welcome"]
-difficulty = "Priced"
+difficulty = "Free"
 
 # tags for the event, will show up as labels.
 # pick 1-4
-tags = ["Conference/Summit"]
+tags = ["Networking"]
 
 # a color, to group key events visually. use sparingly
 color="orange"
