updated event name

--- a/events/2XyourUXWeb3Mixer.toml
+++ b/events/2XyourUXWeb3Mixer.toml
@@ -1,6 +1,6 @@
 
 # the name of your track or event
-name = ""2X your UX" Web3 Mixer!"
+name = "2X your UX-Web3 Mixer!"
 
 # the name of the group organizing the event
 org =  "Arcana Network"
