fix: alignment changes

--- a/devent.toml
+++ b/devent.toml
@@ -17,9 +17,9 @@ A decentralized conference hosted by Protocol Labs
 
 description="""
 
-Muito obrigado - thank you to all those who joined us for LabWeek22. The magnitude of your commitment in partnering with us to drive breakthroughs in computing to push humanity forward is not lost on us. Let's meet again soon.
+The India Crypto Week 2023 is a series of events commencing from‍ 3rd December to 10th December—all aimed at fostering young South Asian talent in this space. 
 
-To those who couldn't join, we hope to see you at the next one.
+With hackathons, workshops, conferences and community events lining your calendar, this page will be your go-to update point. So do plan your travel accordingly!
 """
 
 # Site url
