--- a/events/ETHIndia2023Day1.toml
+++ b/events/ETHIndia2023Day1.toml
@@ -19,7 +19,7 @@ days = 1
 times = "13:00 PM - 23:59 PM"
 
 # the event venue name (will show up on the event card - TODO)
-venueName = "(https://www.google.com/url?q=https://maps.app.goo.gl/e6piDMM6ZrqULw2R6&sa=D&source=editors&ust=1701783124671786&usg=AOvVaw2fhjmuAJ-NuSmrCyqEjnVi)"
+venueName = "[KTPO Convention Centre, Whitefield](https://www.google.com/url?q=https://maps.app.goo.gl/e6piDMM6ZrqULw2R6&sa=D&source=editors&ust=1701783124671786&usg=AOvVaw2fhjmuAJ-NuSmrCyqEjnVi)"
 
 # the event venue address (will show up on a map -- TODO)
 venueAddress = "TBA"
