--- a/events/desiWeb3Citizens.toml
+++ b/events/desiWeb3Citizens.toml
@@ -19,7 +19,7 @@ days = 1
 times = "19:00 PM - 22:30 PM"
 
 # the event venue name (will show up on the event card - TODO)
-venueName = "(https://www.google.com/url?q=https://maps.app.goo.gl/g2jjNtX1u5X13Tx17&sa=D&source=editors&ust=1701783124621668&usg=AOvVaw305TxtMW3FJB-7HtLBYGTt)"
+venueName = "[Zodiac Bar & Kitchen](https://www.google.com/url?q=https://maps.app.goo.gl/g2jjNtX1u5X13Tx17&sa=D&source=editors&ust=1701783124621668&usg=AOvVaw305TxtMW3FJB-7HtLBYGTt)"
 
 # the event venue address (will show up on a map -- TODO)
 venueAddress = "TBA"
