fix: text changes

--- a/devent.toml
+++ b/devent.toml
@@ -43,7 +43,7 @@ logo="IndiaCrypto.svg"
 bgimg="chasm.jpg"
 
 # the social sharing image
-socialImage="labweek-social.png"
+socialImage="ethIndia.png"
 
 # the organizers of the devent (usually a group)
 org="Protocol Labs"
