--- a/events/ibw23ConfDay1.toml
+++ b/events/ibw23ConfDay1.toml
@@ -1,5 +1,5 @@
 # the name of your track or event
-name = "⭐ IBW'23 Conference - Day 1 ⭐"
+name = "IBW'23 Conference - Day 1"
 
 # the name of the group organizing the event
 org = "Hashed Emergent"
@@ -43,7 +43,7 @@ difficulty = "Priced"
 tags = ["Conference/Summit"]
 
 # a color, to group key events visually. use sparingly
-color="orange"
+color="blue"
 
 # A small logomark for the corner of the event (logomark image can be placed in "/website/public/logomarks")
 # logomark = "/logomarks/Protocol Labs.jpeg"
