--- a/events/BUIDLSummitLumosBuidlso.toml
+++ b/events/BUIDLSummitLumosBuidlso.toml
@@ -17,10 +17,10 @@ date = "2023-12-04"
 days = 1
 
 # the event times (shows up in the event card)
-times = "10:00 AM - 18:30"
+times = "10:00 - 18:30"
 
 # the event venue name (will show up on the event card - TODO)
-venueName = "(TBA)"
+venueName = "TBA"
 
 # the event venue address (will show up on a map -- TODO)
 venueAddress = "TBA"
@@ -38,7 +38,7 @@ difficulty = "Invitee-Only"
 tags = ["Conference/Summit"]
 
 # a color, to group key events visually. use sparingly
-color="orange"
+color="blue"
 
 # A small logomark for the corner of the event
 #logomark = "/logomarks/Compute+Over+Data+Working+Group+Logo.png"
@@ -54,4 +54,4 @@ color="orange"
 priority = 3
 
 # if event has a livestream uncomment the following line
- isLive = false
+isLive = false
