--- a/events/FILBangaloreDay1.toml
+++ b/events/FILBangaloreDay1.toml
@@ -17,7 +17,7 @@ date = "2023-12-03"
 days = 1
 
 # the event times (shows up in the event card)
-times = "9:00 AM - TBA"
+times = "9:00 - TBA"
 
 # the event venue name (will show up on the event card - TODO)
 venueName = "[Sheraton Grand Bengaluru Whitefield](https://www.google.com/url?q=https://goo.gl/maps/iQyrjYhJSymRyzvR9&sa=D&source=editors&ust=1701783124589079&usg=AOvVaw3P3Kqza-OXhqDHqmgr3ebd)"
@@ -38,7 +38,7 @@ difficulty = "Free"
 tags = ["Conference/Summit"]
 
 # a color, to group key events visually. use sparingly
-color="orange"
+color="blue"
 
 # A small logomark for the corner of the event
 #logomark = "/logomarks/Compute+Over+Data+Working+Group+Logo.png"
@@ -54,4 +54,4 @@ color="orange"
 priority = 3
 
 # if event has a livestream uncomment the following line
- isLive = false
+isLive = false
