--- a/events/Metamorphosis2023Day2.toml
+++ b/events/Metamorphosis2023Day2.toml
@@ -37,7 +37,7 @@ difficulty = "Priced"
 tags = ["Conference/Summit"]
 
 # a color, to group key events visually. use sparingly
-color="orange"
+color="blue"
 
 # A small logomark for the corner of the event
 #logomark = "/logomarks/Compute+Over+Data+Working+Group+Logo.png"
