--- a/events/aptosDevDayIBW23.toml
+++ b/events/aptosDevDayIBW23.toml
@@ -16,7 +16,7 @@ date = "2023-12-06"
 days = 1
 
 # the event times (shows up in the event card)
-times = "14:00 PM - 18:00 PM"
+times = "14:00 - 18:00"
 
 # the event venue name (will show up on the event card - TODO)
 venueName = "[Sheraton Grand Bengaluru Whitefield](https://www.google.com/url?q=https://maps.app.goo.gl/1HXRPVvoVK1FuNfj6&sa=D&source=editors&ust=1701783124645051&usg=AOvVaw0XvHSzxuqymqLPDMZuFGVY)"
@@ -37,7 +37,7 @@ difficulty = "Free"
 tags = ["Hackathon/Workshop"]
 
 # a color, to group key events visually. use sparingly
-color="orange"
+color="yellow"
 
 # A small logomark for the corner of the event
 #logomark = "/logomarks/Compute+Over+Data+Working+Group+Logo.png"
