--- a/events/billionReasons.toml
+++ b/events/billionReasons.toml
@@ -19,7 +19,7 @@ date = "2023-12-05"
 days = 1
 
 # the event times (shows up in the event card)
-times = "TBA"
+times = "TBA - TBA"
 
 # the event venue name (will show up on the event card - TODO)
 venueName = ""
@@ -43,7 +43,7 @@ difficulty = "Free"
 tags = ["Hackathon/Workshop"]
 
 # a color, to group key events visually. use sparingly
-color="orange"
+color="yellow"
 
 # A small logomark for the corner of the event (logomark image can be placed in "/website/public/logomarks")
 # logomark = "/logomarks/Protocol Labs.jpeg"
